crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__iceberg[hadoop]-federated_tpch_q7.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q7"
---
+-------------+-------------+--------+--------------------+
| supp_nation | cust_nation | l_year | revenue            |
+-------------+-------------+--------+--------------------+
| FRANCE      | GERMANY     | 1995   | 54639732.733600006 |
| FRANCE      | GERMANY     | 1996   | 54633083.30759999  |
| GERMANY     | FRANCE      | 1995   | 52531746.66970008  |
| GERMANY     | FRANCE      | 1996   | 52520549.02239995  |
+-------------+-------------+--------+--------------------+
