crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__iceberg[hadoop]-federated_tpch_q8.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q8"
---
+--------+----------------------+
| o_year | mkt_share            |
+--------+----------------------+
| 1995   | 0.034435890406654825 |
| 1996   | 0.04148552129353025  |
+--------+----------------------+
