crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__iceberg[hadoop]-federated_tpch_q9.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q9"
---
+-----------+--------+--------------------+
| nation    | o_year | sum_profit         |
+-----------+--------+--------------------+
| ALGERIA   | 1998   | 27136900.180300027 |
| ALGERIA   | 1997   | 48611833.49620005  |
| ALGERIA   | 1996   | 48285482.67819993  |
| ALGERIA   | 1995   | 44402273.5999      |
| ALGERIA   | 1994   | 48694008.0668      |
| ALGERIA   | 1993   | 46044207.78379996  |
| ALGERIA   | 1992   | 45636849.488100074 |
| ARGENTINA | 1998   | 28341663.784800023 |
| ARGENTINA | 1997   | 47143964.11759997  |
| ARGENTINA | 1996   | 45255278.6021001   |
+-----------+--------+--------------------+
