crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__iceberg_catalog_tpch_q18.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q18"
---
+--------------------+-----------+------------+-------------+--------------+---------------------------------------+
| c_name             | c_custkey | o_orderkey | o_orderdate | o_totalprice | sum(ice.tpch_sf1.lineitem.l_quantity) |
+--------------------+-----------+------------+-------------+--------------+---------------------------------------+
| Customer#000128120 | 128120    | 4722021    | 1994-04-07  | 544089.09    | 323.00                                |
| Customer#000144617 | 144617    | 3043270    | 1997-02-12  | 530604.44    | 317.00                                |
| Customer#000013940 | 13940     | 2232932    | 1997-04-13  | 522720.61    | 304.00                                |
| Customer#000066790 | 66790     | 2199712    | 1996-09-30  | 515531.82    | 327.00                                |
| Customer#000046435 | 46435     | 4745607    | 1997-07-03  | 508047.99    | 309.00                                |
| Customer#000015272 | 15272     | 3883783    | 1993-07-28  | 500241.33    | 302.00                                |
| Customer#000146608 | 146608    | 3342468    | 1994-06-12  | 499794.58    | 303.00                                |
| Customer#000096103 | 96103     | 5984582    | 1992-03-16  | 494398.79    | 312.00                                |
| Customer#000024341 | 24341     | 1474818    | 1992-11-15  | 491348.26    | 302.00                                |
| Customer#000137446 | 137446    | 5489475    | 1997-05-23  | 487763.25    | 311.00                                |
+--------------------+-----------+------------+-------------+--------------+---------------------------------------+
