crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__mongodb-arrow_tpch_q22.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q22"
---
+--------------------+---------+----------------+
| custsale.cntrycode | numcust | totacctbal     |
+--------------------+---------+----------------+
| 13                 | 888     | 6737713.990000 |
| 17                 | 861     | 6460573.720000 |
| 18                 | 964     | 7236687.400000 |
| 23                 | 892     | 6701457.950000 |
| 29                 | 948     | 7158866.630000 |
| 30                 | 909     | 6808436.130000 |
| 31                 | 922     | 6806670.180000 |
+--------------------+---------+----------------+
