crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__mongodb-duckdb[file]-changes_tpch_q1.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q1"
---
+--------------+--------------+-----------------+---------------------+---------------------------+---------------------------------+--------------------+--------------------+----------------------+-------------+
| l_returnflag | l_linestatus | sum_qty         | sum_base_price      | sum_disc_price            | sum_charge                      | avg_qty            | avg_price          | avg_disc             | count_order |
+--------------+--------------+-----------------+---------------------+---------------------------+---------------------------------+--------------------+--------------------+----------------------+-------------+
| A            | F            | 37734107.000000 | 56586554400.730000  | 53758257134.870000000000  | 55909065222.827692000000000000  | 25.522005853257337 | 38273.129734621674 | 0.049985295838397614 | 1478493     |
| N            | F            | 991417.000000   | 1487504710.380000   | 1413082168.054100000000   | 1469649223.194375000000000000   | 25.516471920522985 | 38284.4677608483   | 0.0500934266742163   | 38854       |
| N            | O            | 74476040.000000 | 111701729697.740000 | 106118230307.605600000000 | 110367043872.497010000000000000 | 25.50222676958499  | 38249.11798890827  | 0.04999658605370408  | 2920374     |
| R            | F            | 37719753.000000 | 56568041380.900000  | 53741292684.604000000000  | 55889619119.831932000000000000  | 25.50579361269077  | 38250.85462609966  | 0.05000940583012706  | 1478870     |
+--------------+--------------+-----------------+---------------------+---------------------------+---------------------------------+--------------------+--------------------+----------------------+-------------+
