crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__mongodb-duckdb[file]-changes_tpch_q11.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q11"
---
+------------+-----------------+
| ps_partkey | value           |
+------------+-----------------+
| 129760     | 17538456.860000 |
| 166726     | 16503353.920000 |
| 191287     | 16474801.970000 |
| 161758     | 16101755.540000 |
| 34452      | 15983844.720000 |
| 139035     | 15907078.340000 |
| 9403       | 15451755.620000 |
| 154358     | 15212937.880000 |
| 38823      | 15064802.860000 |
| 85606      | 15053957.150000 |
+------------+-----------------+
