crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__mongodb-duckdb[file]-changes_tpch_q8.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q8"
---
+--------+--------------------+
| o_year | mkt_share          |
+--------+--------------------+
| 1995   | 0.0344358904066548 |
| 1996   | 0.0414855212935303 |
+--------+--------------------+
